Fixed navigation spacing

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -103,7 +103,7 @@ header nav a {
 header nav a span {
 	border-bottom: 2px solid transparent;
 	display: block;
-	@apply px-6 pt-6 pb-3;
+	@apply px-2 sm:px-6 pt-2 sm:pt-6 pb-2 sm:pb-3 text-sm sm:text-base;
 	height: 100%;
 }
 
